bug: Fixed scroll down icon and  search bar and table alignment

--- a/frontend/src/sass/site-layout/_top-players-page.scss
+++ b/frontend/src/sass/site-layout/_top-players-page.scss
@@ -53,7 +53,7 @@
       gap: 0.6rem;
     }
     .avatar {
-      margin-bottom: .5rem;
+      margin-bottom: 0.5rem;
     }
     .winrate-kda-wrapper {
       display: grid;
@@ -118,6 +118,7 @@
   }
   .table {
     width: 90%;
+    max-width: 100rem;
     td {
       cursor: pointer;
     }
@@ -204,6 +205,8 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
+      width: 90%;
+      padding-left: 5%;
     }
 
     .main-contents > h1 {
@@ -224,14 +227,14 @@
     }
     .card-container:nth-child(2) {
       order: -1;
-      margin-top: .2rem;
+      margin-top: 0.2rem;
       .card {
         margin: 0;
       }
     }
     .card-container:nth-child(3) {
       order: 1;
-      margin-top: .2rem;
+      margin-top: 0.2rem;
       .card {
         margin: 0;
       }
